# cmake-version-test

./: CMakeLists.txt
.github/workflows/: main.yml
